# MHRQI

./: .gitignore  CITATION.cff  CNAME  IQA.py  LICENSE  README.md  circuit.py  circuit_dd.py  circuit_qiskit.py  compare_to.py  dtqw_experimental.py  main.py  mhrqi_runs.csv  mkdocs.yml  patch_cnv3.py  plots.py  pyproject.toml  requirements.txt  statistical_benchmark.py  test_dtqw.py  test_dtqw_minimal.py  utils.py
.binder/: postBuild
.github/workflows/: ci.yml  deploy-pages.yml  generate-benchmarks.yml  publish.yml
RECENT/: raw_results.json  statistical_results.json  summary.json
docs/: benchmarks.md  bot.py  examples.md  index.md
docs/api/: simulation.md
docs/knowledge/: README.md  benchmarking.md  circuit_reference.md  denoiser_guide.md  encoder_guide.md  hierarchical_denoising_math.md  mhrqib_denoiser_math.md  mhrqib_encoder_math.md  seam_theory.md  sibling_smoothing.md  utils_reference.md
docs/site/: MHRQI.html  about.html  benchmark.html  core.js  denoiser.html  encoder.html  findings.html  index.html  preprocessing.html  retrieval.html  simulation.html  style.css
examples/: 01_Introduction_to_MHRQI.ipynb  02_MHRQI_Core_API.ipynb  03_Denoising_and_Advanced_Features.ipynb  04_Monte_Carlo_Simulations.ipynb  05_Medical_Image_Denoising.ipynb
mhrqi/: __init__.py  _version.py
mhrqi/benchmarks/: compare_to.py  statistical_benchmark.py
mhrqi/cli/: main.py
mhrqi/core/: denoising.py  representation.py  results.py  simulation.py
mhrqi/utils/: general.py  monte_carlo.py
tests/: debug_upload.py  denoiser_test.py  encoder_test.py
tests/unit/: test_representation.py  test_results.py
(+7 files in other folders)
