[project]
name = "mhrqi"
version = "0.1.0"
description = "Magnitude Hierarchical Representation of Quantum Images"
authors = [{name = "Keno-00"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "benchmark",
    "runs",
    "docs",
]

# Python version
target-version = "py39"

# Line length
line-length = 100

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (lazy loading)
    "F401",   # imported but unused (lazy loaded modules)
    "B905",   # zip without explicit strict=
    "SIM108", # use ternary operator
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__ files
"__init__.py" = ["F401"]
# Allow print statements in benchmark scripts
"statistical_benchmark.py" = ["T201"]
"compare_to.py" = ["T201"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Format docstrings
docstring-code-format = true
